--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -133,3 +133,31 @@
   publisher={IEEE}
 }
 
+@inproceedings{gu2013efficient,
+  title={Efficient BVH construction via approximate agglomerative clustering},
+  author={Gu, Yan and He, Yong and Fatahalian, Kayvon and Blelloch, Guy},
+  booktitle={Proceedings of the 5th High-Performance Graphics Conference},
+  pages={81--88},
+  year={2013}
+}
+
+@misc{tero2012construct,
+  author       = "Tero Karras",
+  title        = {Thinking Parallel, Part III: Tree Construction on the GPU},
+  howpublished = {\url{https://developer.nvidia.com/blog/thinking-parallel-part-iii-tree-construction-gpu/}},
+  month        = "December",
+  year         = "2012",
+  note         = "",
+  annote       = ""
+}
+
+@book{ericson2004real,
+  title={Real-Time Collision Detection},
+  author={Ericson, C.},
+  isbn={9781558607323},
+  lccn={2005272332},
+  series={Morgan Kaufmann series in interactive 3D technology},
+  url={https://books.google.gr/books?id=WGpL6Sk9qNAC},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
