--- a/report/DOCUMENT/main.tex
+++ b/report/DOCUMENT/main.tex
@@ -15,6 +15,8 @@
 \usepackage{siunitx}
 \usepackage{color}
 \usepackage{kmath,kerkis}
+\usepackage{url}
+\usepackage{hyperref}
 
 \graphicspath{{../graphics/}}
 
