Wrote Related Work intro & changed sections layout

--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -1,12 +1,30 @@
 \chapter{Σχετική Βιβλιογραφία}
 \label{ch:related_work}
+Τα ερωτήματα εγγύτητας και η ανίχνευση σύγκρουσης διερευνώνται 
+εκτενώς για δεκαετίες από ερευνητές στα γραφικά υπολογιστών, στη ρομποτική,
+στις προσομοίωσες, την υπολογιστική γεωμετρία και τα κινούμενα σχέδια 
+υπολογιστών. 
+Εκτός από την ανίχνευση σύγκρουσης και τον υπολογισμό απόστασης, υπάρχει
+σημαντική βιβλιογραφία σχετική με τις Ιεραρχίες Οριοθετικών Όγκων 
+(\tl{BVH}) και τις διάφορες εφαρμογές τους. 
+Σε αυτό το κεφάλαιο κάνουμε αναφορά σε άρθρα της βιβλιογραφίας 
+που μελετούν το ίδιο ή παρόμοιο πρόβλημα με το δικό μας
+και επισημαίνουμε τις τεχνικές που χρησιμοποιούνται 
+και στη δική μας μεθοδολογία.
 
 \section{Εύρεση Κοντινότερου Σημείου σε ένα Σύνολο Σημείων}
 
 \section{Ανίχνευση Σύγκρουσης και Υπολογισμός Απόστασης Πολυγώνων}
+% να πω για linear programming 
+% These include Dobkin-
+% Kirkpatrick hierarchies [DK82], linear programming [Sei90] and algorithms for intersecting
+% convex p olytop es [Cha89 ] 
+% και γενικά ό,τι αναφέρεται στο paper του GJK.
 
-\section{Απόσταση Σημείου από Πολυγωνικό Πλέγμα}
-
-\section{Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}}
-
-\section{Απόσταση Δύο Πολυγωνικών Πλεγμάτων}
+\section{Ιεραρχικές Δομές Δεδομένων}
+%να αναφέρω SAH
+%R-Trees
+%BSP Trees
+% Απόσταση Σημείου από Πολυγωνικό Πλέγμα
+% Απόσταση Δύο Πολυγωνικών Πλεγμάτων
+% Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}
