--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -112,16 +112,6 @@
   year={1988}
 }
 
-@inproceedings{yianilos1993data,
-  title={Data structures and algorithms for nearest neighbor},
-  author={Yianilos, Peter N},
-  booktitle={Proceedings of the fourth annual ACM-SIAM Symposium on Discrete algorithms},
-  volume={66},
-  pages={311},
-  year={1993},
-  organization={SIAM}
-}
-
 @article{friedman1975algorithm,
   title={An algorithm for finding nearest neighbors},
   author={Friedman, Jerome H and Baskett, Forest and Shustek, Leonard J},
@@ -161,3 +151,43 @@
   year={2004},
   publisher={Taylor \& Francis}
 }
+
+@article{aurenhammer1991voronoi,
+  title={Voronoi diagrams—a survey of a fundamental geometric data structure},
+  author={Aurenhammer, Franz},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={23},
+  number={3},
+  pages={345--405},
+  year={1991},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{yianilos1993data,
+  title={Data structures and algorithms for nearest neighbor},
+  author={Yianilos, Peter N},
+  booktitle={Proceedings of the fourth annual ACM-SIAM Symposium on Discrete algorithms},
+  volume={66},
+  pages={311},
+  year={1993},
+  organization={SIAM}
+}
+
+@article{bentley1975multidimensional,
+  title={Multidimensional binary search trees used for associative searching},
+  author={Bentley, Jon Louis},
+  journal={Communications of the ACM},
+  volume={18},
+  number={9},
+  pages={509--517},
+  year={1975},
+  publisher={ACM New York, NY, USA}
+}
+
+@book{simon1996fast,
+  title={Fast and accurate shape-based registration},
+  author={Simon, David A},
+  year={1996},
+  publisher={Carnegie Mellon University}
+}
+
