Wrote Related Work - Object Hierarchies

--- a/report/DOCUMENT/acronyms.tex
+++ b/report/DOCUMENT/acronyms.tex
@@ -3,11 +3,13 @@
 \selectlanguage{english}
 \begin{description}
   \item[AABB] Axis-Aligned Bounding Box
+  \item[BSP] Binary Space Partitioning
   \item[BVH] Bounding Volume Hierarchy
   \item[CAE] Computer Aided Engineering
   \item[DFS] Depth First Search
   \item[FEA] Finite Element Analysis
   \item[MBR] Minimum Bounding Rectangle
   \item[OBB] Oriented Bounding Box
+  \item[SAH] Surface Area Heuristic
 \end{description}
 \selectlanguage{greek}
