--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -13,6 +13,7 @@
 και στη δική μας μεθοδολογία.
 
 \section{Εύρεση Κοντινότερου Κόμβου από Σημείο}
+\label{sec:nearest_node}
 Αρχικά μελετάμε το παρακάτω πρόβλημα: \textit{"Δοθέντος ενός 
 πλέγματος και ενός σημείου (\tl{query-point}), ζητείται να βρεθεί 
 ο κοντινότερος προς το σημείο \textbf{κόμβος} του πλέγματος"}.
@@ -126,18 +127,113 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
 απόσταση του κοντινότερου κόμβου (ακτίνα του μπλε κύκλου).
 
 
-
-\section{Ανίχνευση Σύγκρουσης και Υπολογισμός Απόστασης Κυρτών Πολυγώνων}
 % να πω για linear programming 
 % These include Dobkin-
 % Kirkpatrick hierarchies [DK82], linear programming [Sei90] and algorithms for intersecting
 % convex p olytop es [Cha89 ] 
 % και γενικά ό,τι αναφέρεται στο paper του GJK.
 
-\section{Ιεραρχικές Δομές Δεδομένων}
-%να αναφέρω SAH
-%R-Trees
-%BSP Trees
+\section{Οργάνωση Χωρικών Δεδομένων σε Ιεραρχίες}
+Η ιεραρχική οργάνωση των αντικειμένων του χώρου σε δενδρικές 
+δομές δεδομένων αποτελεί κοινή μεθοδολογία για πολλά προβλήματα 
+της Υπολογιστικής Γεωμετρίας. 
+Τέτοιες δομές χρησιμοποιούνται σε διάφορες εφαρμογές για να 
+επιταχύνουν τη διαδικασία επίλυσης του εκάστοτε προβλήματος, 
+όπως ακριβώς συμβαίνει και στη μεθοδολογία που προτείνουμε. 
+Για τον λόγο αυτό πολλές φορές αναφέρονται και ως \textit{δομές 
+δεδομένων επιτάχυνσης (\tl{acceleration data structures})}.
+
+Χαρακτηριστικά παραδείγματα αποτελούν:
+\begin{itemize}
+    \item Οι δομές \tl{\textit{VP-Tree}, \textit{kD-Tree}} που 
+    περιγράφονται στο \ref{sec:nearest_node} και χρησιμοποιούνται 
+    για το πρόβλημα εύρεσης των $k$ κοντινότερων γειτόνων (\tl{\textit{kNN}}). 
+
+    \item Το \tl{\textit{R-Tree}} που περιγράφεται στο \cite{guttman1984r}, 
+    και χρησιμοποιείται ως ευρετήριο σε βάσεις δεδομένων που αποθηκεύουν χωρικά 
+    δεδομένα/αντικείμενα.
+    Το \tl{R-Tree} χρησιμοποιεί \textit{ελάχιστα οριοθετικά παραλληλόγραμμα (\tl{MBR})}
+    για την οργάνωση των χωρικών αντικειμένων, από τα φύλλα έως τη ρίζα και ανήκει 
+    στην οικογένεια των Ιεραρχιών Οριοθετικών Όγκων (\tl{BVH}).
+    Υποστηρίζει εισαγωγή, διαγραφή και ενημέρωση δεδομένων καθώς επίσης 
+    και ερωτήματα εύρεσης των αντικειμένων που βρίσκονται εντός μιας δοθείσας περιοχής. 
+    Γενικά, το \tl{R-Tree} δεν είναι δυαδικό δέντρο και ο τρόπος διάσχισης του 
+    δεν είναι τετριμμένος.
+    Στο \cite{roussopoulos1995nearest} περιγράφεται ένας αλγόριθμος 
+    εύρεσης των $k$ κοντινότερων αντικειμένων από κάποιο σημείο $p$, για το \tl{R-Tree}.
+    Στον αλγόριθμο αυτόν εισάγωνται οι μετρικές απόστασης \textit{\tl{MINDIST}}
+    και \textit{\tl{MINMAXDIST}} βάση των οποίων ορίζεται η σειρά της αναζήτησης 
+    με κάποια προτεραιότητα.
+    Οι μετρικές αποτελούν το κάτω και άνω φράγμα, αντίστοιχα, της απόστασης του 
+    αντικειμένου από το σημείο $p$.
+
+    \item Το \tl{\textit{BSP-Tree}}, που περιγράφεται στο \cite{fuchs1980visible},
+    χρησιμοποιείται για την απόδοση γραφικών καθώς μπορεί να δώσει χωρικές πληροφορίες 
+    για τα αντικείμενα μιας σκηνής. 
+    Συνήθως τα αντικείμενα είναι πολύγωνα στον τρισδιάστατο χώρο.
+    Η δομή του επιτρέπει την εύκολη διάσχιση των αντικειμένων μιας σκηνής από πίσω προς 
+    τα εμπρός για δοσμένη θέση θέασης.
+    Συγκεκριμένα, η κατασκευή του γίνεται μια μόνο φορά για κάποια στατική σκηνή 
+    και το ίδιο δέντρο μπορεί να χρησιμοποιηθεί για οποιαδήποτε γωνία θέασης.
+    Για την κατασκευή του, ο χώρος διαχωρίζεται αναδρομικά 
+    σε δύο ημι-χώρους (\tl{half-spaces}) με βάση κάποιο επίπεδο.
+    Τα αντικείμενα (ολόκληρα ή κάποιο μέρος τους) τοποθετούνται στο αριστερό ή δεξί
+    παιδί ανάλογα με τον ημι-χώρο στον οποίο ανήκουν.
+    Παρόλο που αποθηκεύει χωρικά δεδομένα (και όχι σημεία), το \tl{BSP-Tree} 
+    θεωρείται γενίκευση του \tl{kD-Tree} διότι τα επίπεδα που χωρίζουν 
+    τον χώρο μπορεί να έχουν οποιονδήποτε προσανατολισμό σε αντίθεση 
+    με τα ευθυγραμμισμένα με τους άξονες επίπεδα του \tl{kD-Tree}.
+
+    \item Το \tl{\textit{Octree}}, που περιγράφεται στο \cite{meagher1982geometric}
+    χρησιμοποιείται σε πολλές εφαρμογές για απόδοση γραφικών, ανίχνευση σύγκρουσης, 
+    ανίχνευση ακτίνων, ως χωρικό ευρετήριο, ως γεννήτρια πλεγμάτων κ.α. 
+    Ένας κόμβος του δέντρου μπορεί να έχει έως και οκτώ παιδιά που κάθε ένα
+    αντιπροσωπεύει ένα ογδοημόριο του τρισδιάστατου χώρου που καταλαμβάνει ο 
+    πατρικός κόμβος.
+    Συνήθως για την κατασκευή του αρχικά ορίζεται το ελάχιστο μέγεθος που μπορεί να 
+    έχει ένα ογδοημόριο και ο χώρος που καταλαμβάνει η ρίζα του δέντρου. 
+    Έπειτα κάθε κόμβος του  δέντρου 
+    διαιρείται σε ογδοημόρια μέχρι είτε να μην περιέχεται κανένα αντικείμενο 
+    εντός του ογδοημορίου, είτε το ογδοημόριο να πάρει το ελάχιστο δυνατό μέγεθος.
+    Οι κόμβοι του δέντρου που δεν περιέχουν τίποτα στο εσωτερικό τους μπορούν να αγνοηθούν.
+    Έτσι, οποιοδήποτε τρισδιάστατο αντικείμενο μπορεί να αναπαρασταθεί με οσοδήποτε 
+    μεγάλη ανάλυση (\tl{resolution}).
+    Στην παραπάνω δημοσίευση περιγράφονται επίσης αλγόριθμοι για διάφορες πράξεις μεταξύ 
+    αντικειμένων που αναπαρίστανται από \tl{Octrees}.
+    Τέτοιες είναι οι πράξεις της ένωσης, τομής, διαφοράς, οι γεωμετρικές πράξεις 
+    μεταφοράς, περιστροφής, κλιμάκωσης και η ανίχνευση σύγκρουσης και απόδοσης γραφικών 
+    από οποιαδήποτε γωνία θέασης. 
+\end{itemize}
+
+Πολλές από τις τεχνικές που αναφέρονται παραπάνω ακολουθούνται και 
+στη δική μας μεθοδολογία.
+Παραδείγματα αποτελούν η χρήση οριοθετικών όγκων και η αναδρομική οργάνωση 
+των αντικειμένων σε μια ιεραρχία, η μοντελοποίηση του προβλήματος 
+ως πρόβλημα κοντινότερων γειτόνων για χωρικά δεδομένα και ο 
+ορισμός της σειράς επίσκεψης των κόμβων της ιεραρχίας, κατά την αναζήτηση, με 
+βάση μια μετρική απόστασης.
+
+Τέλος, αξίζει να σημειωθεί ότι στη βιβλιογραφία γίνεται λόγος για την 
+ποιότητα των Ιεραρχιών Οριοθετικών Όγκων. 
+Ορίζονται μετρικές ποιότητας που χρησιμεύουν τόσο στην αξιολόγηση όσο 
+και στην κατασκευή των ιεραρχικών δομών.
+Επί του παρόντος, δεν υπάρχει πρακτικός τρόπος για τον προσδιορισμό 
+του βέλτιστου διαχωρισμού των αντικειμένων ενός κόμβου σε δύο υποσύνολα.
+Έτσι, δεν είναι γνωστό ποια αντικείμενα πρέπει να ομαδοποιηθούν μαζί
+με άλλα για να επιτευχθεί η καλύτερη δυνατή επίδοση των αλγορίθμων.
+Η πιο διαδεδομένη μετρική κόστους είναι η 
+\textit{\tl{SAH (Surface Area Heuristic)}} 
+\cite{goldsmith1987automatic} \cite{macdonald1990heuristics}
+η οποία, περιληπτικά, "επιβραβεύει" μικρούς χωρικά κόμβους με πολλά 
+αντικείμενα και "τιμωρεί" μεγάλους κόμβους με λίγα τρίγωνα. 
+Επίσης, στο \cite{aila2013quality} εισάγωνται οι μετρικές 
+\tl{\textit{EPO (End-point Overlap)}} και 
+\tl{\textit{LCV (Leaf Count Variability)}} ως συμπληρωματικές 
+της \tl{SAH} για να εξηγήσουν την παρατηρούμενη επίδοση 
+των δέντρων σε περιπτώσεις όπου η \tl{SAH} αδυνατεί να 
+δικαιολογήσει την επίδοση κάποιων δέντρων συγκριτικά 
+με άλλα.
+
 % Απόσταση Σημείου από Πολυγωνικό Πλέγμα
 % Απόσταση Δύο Πολυγωνικών Πλεγμάτων
 % Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}
