--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -191,3 +191,68 @@
   publisher={Carnegie Mellon University}
 }
 
+@inproceedings{guttman1984r,
+  title={R-trees: A dynamic index structure for spatial searching},
+  author={Guttman, Antonin},
+  booktitle={Proceedings of the 1984 ACM SIGMOD international conference on Management of data},
+  pages={47--57},
+  year={1984}
+}
+
+@inproceedings{roussopoulos1995nearest,
+  title={Nearest neighbor queries},
+  author={Roussopoulos, Nick and Kelley, Stephen and Vincent, Frederic},
+  booktitle={Proceedings of the 1995 ACM SIGMOD international conference on Management of data},
+  pages={71--79},
+  year={1995}
+}
+
+@inproceedings{fuchs1980visible,
+  title={On visible surface generation by a priori tree structures},
+  author={Fuchs, Henry and Kedem, Zvi M and Naylor, Bruce F},
+  booktitle={Proceedings of the 7th annual conference on Computer graphics and interactive techniques},
+  pages={124--133},
+  year={1980}
+}
+
+@article{meagher1982geometric,
+  title={Geometric modeling using octree encoding},
+  author={Meagher, Donald},
+  journal={Computer graphics and image processing},
+  volume={19},
+  number={2},
+  pages={129--147},
+  year={1982},
+  publisher={Elsevier}
+}
+
+@article{goldsmith1987automatic,
+  title={Automatic creation of object hierarchies for ray tracing},
+  author={Goldsmith, Jeffrey and Salmon, John},
+  journal={IEEE Computer Graphics and Applications},
+  volume={7},
+  number={5},
+  pages={14--20},
+  year={1987},
+  publisher={IEEE}
+}
+
+@article{macdonald1990heuristics,
+  title={Heuristics for ray tracing using space subdivision},
+  author={MacDonald, J David and Booth, Kellogg S},
+  journal={The Visual Computer},
+  volume={6},
+  number={3},
+  pages={153--166},
+  year={1990},
+  publisher={Springer}
+}
+
+@inproceedings{aila2013quality,
+  title={On quality metrics of bounding volume hierarchies},
+  author={Aila, Timo and Karras, Tero and Laine, Samuli},
+  booktitle={Proceedings of the 5th High-Performance Graphics Conference},
+  pages={101--107},
+  year={2013}
+}
+
