Changed layout Ch:Related Work

--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -12,7 +12,9 @@
 και επισημαίνουμε τις τεχνικές που χρησιμοποιούνται 
 και στη δική μας μεθοδολογία.
 
-\section{Εύρεση Κοντινότερου Κόμβου από Σημείο}
+\section{Υπολογισμός Αποστάσεων προς Αντικείμενα}
+
+\subsection{Κοντινότερος Κόμβος Πλέγματος από Σημείο}
 \label{sec:nearest_node}
 Αρχικά μελετάμε το παρακάτω πρόβλημα: \textit{"Δοθέντος ενός 
 πλέγματος και ενός σημείου (\tl{query-point}), ζητείται να βρεθεί 
@@ -133,6 +135,12 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
 % convex p olytop es [Cha89 ] 
 % και γενικά ό,τι αναφέρεται στο paper του GJK.
 
+\subsection{Απόσταση Σημείου από Πολυγωνικό Πλέγμα}
+% Απόσταση Σημείου από Πολυγωνικό Πλέγμα
+
+\subsection{Απόσταση Δύο Αντικειμένων}
+% Απόσταση Δύο Πολυγωνικών Πλεγμάτων
+% Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}
 \section{Οργάνωση Χωρικών Δεδομένων σε Ιεραρχίες}
 Η ιεραρχική οργάνωση των αντικειμένων του χώρου σε δενδρικές 
 δομές δεδομένων αποτελεί κοινή μεθοδολογία για πολλά προβλήματα 
@@ -233,7 +241,3 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
 των δέντρων σε περιπτώσεις όπου η \tl{SAH} αδυνατεί να 
 δικαιολογήσει την επίδοση κάποιων δέντρων συγκριτικά 
 με άλλα.
-
-% Απόσταση Σημείου από Πολυγωνικό Πλέγμα
-% Απόσταση Δύο Πολυγωνικών Πλεγμάτων
-% Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}
