Wrote about Closest Mesh Point to a Point

--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -44,6 +44,7 @@
 δύο πλεγμάτων στον τρισδιάστατο χώρο.
 
 \section{Περιγραφή του Προβλήματος}
+\label{sec:problem_description}
 Δοθέντων δύο αντικειμένων στον χώρο, τα οποία περιγράφονται από 
 τριγωνικά πλέγματα, το πιο φυσικό μέγεθος για την περιγραφή της 
 εγγύτητας μεταξύ τους είναι η Ευκλείδεια απόσταση. 
