--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -136,9 +136,31 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
 % και γενικά ό,τι αναφέρεται στο paper του GJK.
 
 \subsection{Απόσταση Σημείου από Πολυγωνικό Πλέγμα}
-% Απόσταση Σημείου από Πολυγωνικό Πλέγμα
+Η περιγραφή του προβλήματος είναι η ακόλουθη: 
+\textit{"Δοθέντος ενός πλέγματος και ενός σημείου του χώρου \tl{(query-point)},
+ζητείται να βρεθεί το κοντινότερο \textbf{σημείο} που ανήκει 
+στο πλέγμα"}.
+Τα δύο παραπάνω σημεία ορίζουν την Ευκλείδεια απόσταση πλέγματος και σημείου, 
+η οποία ονομάζεται και απόσταση διαχωρισμού (πλέγματος και σημείου).
 
+Αν και το πρόβλημα υπολογισμού της Ευκλείδειας απόστασης δύο αντικειμένων 
+στο χώρο αποτελεί γενίκευση του παραπάνω προβλήματος, στο 
+\cite{guezlec2001meshsweeper} υποστηρίζεται ότι αξίζει να μελετηθεί 
+ξεχωριστά γιατί μπορούν να αναπτυχθούν πιο αποδοτικοί αλγόριθμοι.
+Στην προαναφερθείσα δημοσίευση, χρησιμοποιείται μια ιεραρχία οριοθετικών 
+όγκων πολλαπλών αναλύσεων που δημιουργείται από γεωμετρική απλοποίηση 
+του πλέγματος. 
+Καθώς η ανάλυση του πλέγματος βελτιώνεται, ολοένα και πιο ακριβής γίνεται 
+η εκτίμηση του κοντινότερου σημείου, ενώ ταυτόχρονα ο αλγόριθμος σε κάθε βήμα 
+μπορεί να παρέχει τα άνω και κάτω φράγματα του σφάλματος της εκτίμησης.
+Οι οριοθετικοί όγκοι που χρησιμοποιούνται στην ιεραρχία είναι τρίγωνα 
+που σαρώνονται από μια σφαίρα (\tl{triangles swept by sphere}) και 
+αποτελούν γενίκευση της οριοθετικής κάψουλας. 
+  
 \subsection{Απόσταση Δύο Αντικειμένων}
+% Ο ορισμός του προβλήματος υπολογισμού της Ευκλείδειας απόστασης δύο αντικειμένων 
+% έχει δοθεί στο \ref{sec:problem_description}.
+
 % Απόσταση Δύο Πολυγωνικών Πλεγμάτων
 % Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}
 \section{Οργάνωση Χωρικών Δεδομένων σε Ιεραρχίες}
