--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -256,3 +256,21 @@
   year={2013}
 }
 
+@inproceedings{quinlan1994efficient,
+  title={Efficient distance computation between non-convex objects},
+  author={Quinlan, Sean},
+  booktitle={Proceedings of the 1994 IEEE International Conference on Robotics and Automation},
+  pages={3324--3329},
+  year={1994},
+  organization={IEEE}
+}
+
+@inproceedings{johnson1998framework,
+  title={A framework for efficient minimum distance computations},
+  author={Johnson, David E and Cohen, Elaine},
+  booktitle={Proceedings. 1998 IEEE International Conference on Robotics and Automation (Cat. No. 98CH36146)},
+  volume={4},
+  pages={3678--3684},
+  year={1998},
+  organization={IEEE}
+}
