Updates on Related Work - Object Hierarchies

--- a/report/DOCUMENT/acronyms.tex
+++ b/report/DOCUMENT/acronyms.tex
@@ -11,5 +11,6 @@
   \item[MBR] Minimum Bounding Rectangle
   \item[OBB] Oriented Bounding Box
   \item[SAH] Surface Area Heuristic
+  \item[SAT] Separating Axis Theorem 
 \end{description}
 \selectlanguage{greek}
