--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -185,6 +185,7 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
     Το \tl{R-Tree} χρησιμοποιεί \textit{ελάχιστα οριοθετικά παραλληλόγραμμα (\tl{MBR})}
     για την οργάνωση των χωρικών αντικειμένων, από τα φύλλα έως τη ρίζα και ανήκει 
     στην οικογένεια των Ιεραρχιών Οριοθετικών Όγκων (\tl{BVH}).
+
     Υποστηρίζει εισαγωγή, διαγραφή και ενημέρωση δεδομένων καθώς επίσης 
     και ερωτήματα εύρεσης των αντικειμένων που βρίσκονται εντός μιας δοθείσας περιοχής. 
     Γενικά, το \tl{R-Tree} δεν είναι δυαδικό δέντρο και ο τρόπος διάσχισης του 
@@ -203,6 +204,7 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
     Συνήθως τα αντικείμενα είναι πολύγωνα στον τρισδιάστατο χώρο.
     Η δομή του επιτρέπει την εύκολη διάσχιση των αντικειμένων μιας σκηνής από πίσω προς 
     τα εμπρός για δοσμένη θέση θέασης.
+
     Συγκεκριμένα, η κατασκευή του γίνεται μια μόνο φορά για κάποια στατική σκηνή 
     και το ίδιο δέντρο μπορεί να χρησιμοποιηθεί για οποιαδήποτε γωνία θέασης.
     Για την κατασκευή του, ο χώρος διαχωρίζεται αναδρομικά 
@@ -214,13 +216,54 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
     τον χώρο μπορεί να έχουν οποιονδήποτε προσανατολισμό σε αντίθεση 
     με τα ευθυγραμμισμένα με τους άξονες επίπεδα του \tl{kD-Tree}.
 
+    \item Το \tl{\textit{OBBTree}}, που περιγράφεται στο \cite{gottschalk1996obbtree}
+    ανήκει, επίσης, στην οικογένεια των Ιεραρχιών Οριοθετικών Όγκων και χρησιμοποιεί 
+    \textit{προσανατολισμένα οριοθετικά πλαίσια (\tl{OBB})}. 
+    Χρησιμοποιείται για την ανίχνευση σύγκρουσης αντικειμένων που αναπαρίστανται 
+    από πολυγωνικά πλέγματα. 
+    Για την κατασκευή του δέντρου είναι απαραίτητα: 
+    \begin{enumerate}
+        \item Μια διαδικασία που για δοσμένο σύνολο πολυγώνων υπολογίζει 
+        κάποιο \tl{OBB} με παρόμοιες διαστάσεις και προσανατολισμό
+        ώστε να περικλείει τα πολύγωνα.
+        \item Ένας τρόπος οργάνωσης των \tl{OBB} σε ιεραρχία.
+    \end{enumerate}
+    Στην παραπάνω δημοσίευση, για τον υπολογισμό του \tl{OBB} αρχικά κάθε πολύγωνο
+    διασπάται σε τρίγωνα και έπειτα χρησιμοποιούνται στατιστικά
+    πρώτης και δεύτερης τάξης που περιγράφουν τις συντεταγμένες των κόμβων
+    (μέσος όρος και πίνακας συνδιακύμανσης).
+    Έτσι υπολογίζεται ένα ορθοκανονικό σύστημα συντεταγμένων για τον προσανατολισμό 
+    του \tl{OBB} και το μέγεθος του ορίζεται από τα ακραία σημεία κατά μήκος κάθε άξονα.
+    
+    Για την οργάνωση των \tl{OBB} σε ιεραρχία προτείνεται μια μέθοδος από 
+    πάνω προς τα κάτω: ο μεγαλύτερος άξονας του \tl{OBB}
+    χωρίζεται με βάση ένα επίπεδο κάθετο προς τον άξονα και 
+    τα πολύγωνα διαχωρίζονται ανάλογα τη μεριά του επιπέδου που αντιστοιχίζεται 
+    το κέντρο τους.
+    Η συντεταγμένη του επιπέδου διαχωρισμού κατά μήκος αυτού του άξονα
+    επιλέγεται να είναι η μέση τιμή των συντεταγμένων των κόμβων.
+    Αντί για τη μέση τιμή μπορεί να χρησιμοποιηθεί η διάμεσος, οπότε 
+    το δέντρο που θα προκύψει είναι ισορροπημένο. 
+    Ο χρόνος κατασκευής του δέντρου με τον παραπάνω αλγόριθμο είναι της 
+    τάξης $\bigO(nlogn)$, για ένα σετ με $n$ τρίγωνα. 
+    
+    Έχοντας τα \tl{OBBTree} για δύο αντικείμενα ο αλγόριθμος 
+    για τον έλεγχο σύγκρουσης, τυπικά, ξοδεύει τον περισσότερο 
+    χρόνο ελέγχοντας ζευγάρια από \tl{OBB} για επικάλυψη.   
+    Για τον έλεγχο επικάλυψης δύο \tl{OBB} σχεδιάζεται ειδική ρουτίνα
+    όπου γίνεται χρήση του \textit{θεωρήματος του διαχωριστικού άξονα 
+    (\tl{separating axis theorem - \textbf{SAT}})} 
+    \cite{gottschalk1996separating}.
+
     \item Το \tl{\textit{Octree}}, που περιγράφεται στο \cite{meagher1982geometric}
     χρησιμοποιείται σε πολλές εφαρμογές για απόδοση γραφικών, ανίχνευση σύγκρουσης, 
     ανίχνευση ακτίνων, ως χωρικό ευρετήριο, ως γεννήτρια πλεγμάτων κ.α. 
     Ένας κόμβος του δέντρου μπορεί να έχει έως και οκτώ παιδιά που κάθε ένα
     αντιπροσωπεύει ένα ογδοημόριο του τρισδιάστατου χώρου που καταλαμβάνει ο 
-    πατρικός κόμβος.
-    Συνήθως για την κατασκευή του αρχικά ορίζεται το ελάχιστο μέγεθος που μπορεί να 
+    πατρικός κόμβος. 
+    Τα ογδοημόρια είναι οριοθετικά πλαίσια ευθυγραμμισμένα με τους άξονες.
+
+    Συνήθως για την κατασκευή του, αρχικά ορίζεται το ελάχιστο μέγεθος που μπορεί να 
     έχει ένα ογδοημόριο και ο χώρος που καταλαμβάνει η ρίζα του δέντρου. 
     Έπειτα κάθε κόμβος του  δέντρου 
     διαιρείται σε ογδοημόρια μέχρι είτε να μην περιέχεται κανένα αντικείμενο 
@@ -228,8 +271,9 @@ $q$ (ακτίνα του κόκκινου κύκλου) διαφέρει από 
     Οι κόμβοι του δέντρου που δεν περιέχουν τίποτα στο εσωτερικό τους μπορούν να αγνοηθούν.
     Έτσι, οποιοδήποτε τρισδιάστατο αντικείμενο μπορεί να αναπαρασταθεί με οσοδήποτε 
     μεγάλη ανάλυση (\tl{resolution}).
-    Στην παραπάνω δημοσίευση περιγράφονται επίσης αλγόριθμοι για διάφορες πράξεις μεταξύ 
-    αντικειμένων που αναπαρίστανται από \tl{Octrees}.
+
+    Στην παραπάνω δημοσίευση περιγράφονται επίσης αλγόριθμοι για τις διάφορες 
+    πράξεις μεταξύ αντικειμένων που αναπαρίστανται από \tl{Octrees}.
     Τέτοιες είναι οι πράξεις της ένωσης, τομής, διαφοράς, οι γεωμετρικές πράξεις 
     μεταφοράς, περιστροφής, κλιμάκωσης και η ανίχνευση σύγκρουσης και απόδοσης γραφικών 
     από οποιαδήποτε γωνία θέασης. 
