--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -274,3 +274,18 @@
   year={1998},
   organization={IEEE}
 }
+
+@inproceedings{gottschalk1996obbtree,
+  title={OBBTree: A hierarchical structure for rapid interference detection},
+  author={Gottschalk, Stefan and Lin, Ming C and Manocha, Dinesh},
+  booktitle={Proceedings of the 23rd annual conference on Computer graphics and interactive techniques},
+  pages={171--180},
+  year={1996}
+}
+
+@article{gottschalk1996separating,
+  title={Separating axis theorem},
+  author={Gottschalk, Stefan},
+  year={1996},
+  publisher={Technical Report TR96-024, Department of Computer Science, UNC Chapel Hill}
+}
